--- a/app/Resources/views/cours/adminGroupe.html.twig
+++ b/app/Resources/views/cours/adminGroupe.html.twig
@@ -30,7 +30,7 @@
         <div class="row mb-10">
             <div class="LabelAdmin col-sm-3">Description</div>
             <div class="noPadding col-sm-9  col-xs-12">
-                <textarea data-champName="description" id="zone_{{ zoneId }}_groupeLien_{{ itemId }}_descr" class="simpleEditor editor champAdmin">{{ description }}</textarea>
+                <textarea data-champName="description" id="zone_{{ zoneId }}_groupeLien_{{ itemId }}_descr" class="simpleEditor editor champAdmin" readonly>{{ description }}</textarea>
             </div>
 
         </div>
