--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -204,6 +204,9 @@ a { font-family: inherit; color: inherit; }
 textarea{
     resize: none;
 }
+textarea[readonly]{
+    background: none;
+}
 
 .ui-state-highlight {
     min-height: 30px;
