--- a/app/Resources/views/cours/adminDevoir.html.twig
+++ b/app/Resources/views/cours/adminDevoir.html.twig
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="LabelAdmin col-sm-3">Description</div>
             <div class="col-sm-9  col-xs-12 noPadding">
-                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ devoir.id }}_descr" class="simpleEditor editor champAdmin">{{ devoir.description }}</textarea>
+                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ devoir.id }}_descr" class="simpleEditor editor champAdmin" readonly>{{ devoir.description }}</textarea>
             </div>
         </div>
         <hr class="hrCourseElem" />
