--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -304,7 +304,11 @@
                                                         </div>
                                                         <div class="col-xs-2 text-right">
                                                             <a class="btn btnLien btn-sm btn-warning" target="_blank" href="{{ valR.url }}">
-                                                                <i class="fa {{ valR.typeLien.faIcon }}"></i>
+                                                                {% if valR.typeLien.faIcon is defined %}
+                                                                    <i class="fa {{ valR.typeLien.faIcon }}"></i>
+                                                                {% else %}
+                                                                    <i class="fa fa-external-link"></i>
+                                                                {% endif %}
                                                             </a>
                                                         </div>
 
@@ -446,7 +450,11 @@
                                                             <a class="btnLienGroupeRessource btn btn-xs"
                                                                style="background-color: {{ valG.categorieLien.couleur }};" target="_blank"
                                                                href="{{ valG.lien.url }}">
-                                                                <i class="fa {{ valG.lien.typeLien.faIcon }} fa-2x"></i>
+                                                                {% if valG.lien.typeLien.faIcon is defined %}
+                                                                    <i class="fa {{ valG.lien.typeLien.faIcon }}"></i>
+                                                                {% else %}
+                                                                    <i class="fa fa-external-link"></i>
+                                                                {% endif %}
                                                                 {{ valG.nom }}
                                                             </a>
                                                         {%  endfor %}
