--- a/app/Resources/views/documents/docArray.html.twig
+++ b/app/Resources/views/documents/docArray.html.twig
@@ -11,13 +11,19 @@
             </thead>
             <tbody>
                 {% for key,val in docs %}
-                    <tr data-docId="{{ val.id }}">
-                        <td><a href="{{ val.url }}">{{ val.nom }}</a><i class="fa fa-info-circle infoDocument" aria-hidden="true"></i></td>
-                        <td>{{ val.proprietaire.firstname }} {{ val.proprietaire.lastName }}</td>
-                        <td data-text="{{ val.dateCrea|date("Y-m-d" ) }}">{{ val.dateCrea|localizeddate('none', 'none', null, null, 'd LLLL Y à h:mm' ) }}</td>
+                    <tr data-docId="{{ val[0].id }}">
                         <td>
-                            <a href="{{ val.url }}" class="btn btn-primary btn-sm btnDocOpen" target="_blank">Télécharger</a>
-                            {% if app.user.id == val.proprietaire.id or app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                            <a href="{{ val[0].url }}">{{ val[0].nom }}</a>
+                            <i class="fa fa-info-circle infoDocument" aria-hidden="true"></i>
+                            {% if val[1] == 1 %}
+                                <i class="fa fa-star-o iconeNewDoc" aria-hidden="true"></i>
+                            {% endif %}
+                        </td>
+                        <td>{{ val[0].proprietaire.firstname }} {{ val[0].proprietaire.lastName }}</td>
+                        <td data-text="{{ val[0].dateCrea|date("Y-m-d" ) }}">{{ val[0].dateCrea|localizeddate('none', 'none', null, null, 'd LLLL Y à h:mm' ) }}</td>
+                        <td>
+                            <a href="{{ val[0].url }}" class="btn btn-primary btn-sm btnDocOpen" target="_blank">Télécharger</a>
+                            {% if app.user.id == val[0].proprietaire.id or app.user.hasRole('ROLE_SUPER_ADMIN') %}
                                 <a class="btn btn-sm btn-danger deleteDoc">Supprimer</a>
                             {% endif %}
                         </td>
