--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -104,6 +104,7 @@
                             <ul class="sub-menu">
                                 {% block vueAdmin %}{% endblock %}
                                 <li><a href="{{ path('calendrier') }}">Mon calendrier</a></li>
+                                <li><a href="{{ path('messagerie') }}">Messagerie</a></li>
                                 <li><a href="#">Mon compte</a></li>
                                 <li><a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
                             </ul>
